feat: Cucumber for BDD

--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -8,6 +8,10 @@
           li = message
 
   .field
+    = f.label :name
+    = f.text_field :name
+
+  .field
     = f.label :when
     = f.datetime_select :when
 
